investigator/overlays/moc-prod/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: investigator-consumer
spec:
  replicas: 1
  selector:
    service: investigator-consumer
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: investigator
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: investigator-consumer
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: investigator
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: investigator
      containers:
        - image: investigator:latest
          name: investigator-consumer
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "1.5"
          ports:
            - containerPort: 6066
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/_health"
              port: 6066
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 1
            # Give this consumer 2 hours to finish
            initialDelaySeconds: 7200
            periodSeconds: 10
            tcpSocket:
              port: 80
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
              - key: kafka_user.crt
                path: kafka_user.crt
              - key: kafka_user.key
                path: kafka_user.key
              - key: kafka_user.password
                path: kafka_user.password
  test: false
