investigator/overlays/moc-prod/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: investigator-faust-web
spec:
  to:
    kind: Service
    name: investigator-faust-web
